--- a/package.json
+++ b/package.json
@@ -4,8 +4,27 @@
   "description": "Share your Travel Experiences",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./backend/server.js",
+    "dev": "set NODE_ENV=development&&nodemon ./backend/server.js",
+    "prod": "set NODE_ENV=production&&nodemon ./backend/server.js",
+    "seeder": "node backend/utils/seeder.js"
   },
   "author": "Pradeep M",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
+    "stripe": "^12.11.0",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
